kubernetes/apps/components/arr/base/arr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arr
  labels:
    app: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arr
  template:
    metadata:
      labels:
        app: arr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.4.4@sha256:be53998a2d39cfa3c3315b70c7509a6a1f2a10c3aee9337653efc9f4c970430e
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 7878
              name: radarr
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: radarr-config
              mountPath: /config

        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.17@sha256:1989718e9fceb3fd35b4e73f61696c68f8959b8f09981cf137fdef8e6338b85f
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8989
              name: sonarr
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: sonarr-config
              mountPath: /config

        - name: prowlarr
          image: ghcr.io/home-operations/prowlarr:2.6.4@sha256:a5b8031268268b9d3a121c49ea7cc89248538e6379a3e29b0d419489bd95e004
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 9696
              name: prowlarr
              protocol: TCP
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
