kubernetes/apps/components/arr/base/arr/sonarr-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: sso-eg
      namespace: envoy-gateway-system
  hostnames:
    - sonarr${ROUTE_SUFFIX}.${HOMELAB_INTERNAL_SUBDOMAIN}
  rules:
    - timeouts:
        request: 120s
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: arr
          port: 8989
